# ffmpeg-rs

./: .gitignore
ffmpeg-sys/: Cargo.toml  build.rs  wrapper.h
ffmpeg-sys/src/: lib.rs
